compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bit_arrays__as_module_const.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bit_arrays.rs
assertion_line: 1717
expression: "\n          pub const data = <<\n            0x1,\n            2,\n            2:size(16),\n            0x4:size(32),\n            -1:32,\n            \"Gleam\":utf8,\n            4.2:float,\n            4.2:32-float,\n            <<0xFA>>:bits-6,\n            -1:64,\n            <<\n              <<1, 2, 3>>:bits,\n              \"Gleam\":utf8,\n              1024\n            >>:bits\n          >>\n        "
snapshot_kind: text
---
----- SOURCE CODE

          pub const data = <<
            0x1,
            2,
            2:size(16),
            0x4:size(32),
            -1:32,
            "Gleam":utf8,
            4.2:float,
            4.2:32-float,
            <<0xFA>>:bits-6,
            -1:64,
            <<
              <<1, 2, 3>>:bits,
              "Gleam":utf8,
              1024
            >>:bits
          >>
        

----- COMPILED JAVASCRIPT
import { toBitArray, bitArraySlice, sizedInt, stringBits, sizedFloat } from "../gleam.mjs";

export const data = /* @__PURE__ */ toBitArray([
  1,
  2,
  0, 2,
  0, 0, 0, 4,
  255, 255, 255, 255,
  stringBits("Gleam"),
  sizedFloat(4.2, 64, true),
  sizedFloat(4.2, 32, true),
  bitArraySlice(/* @__PURE__ */ toBitArray([250]), 0, 6),
  sizedInt(-1, 64, true),
  /* @__PURE__ */ toBitArray([
    /* @__PURE__ */ toBitArray([1, 2, 3]),
    stringBits("Gleam"),
    0,
  ]),
]);
