compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bit_arrays__bit_array_dynamic_slice.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bit_arrays.rs
assertion_line: 380
expression: "\npub fn go(x) {\n  let i = 4\n  <<<<0xAB>>:bits-size(i)>>\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  let i = 4
  <<<<0xAB>>:bits-size(i)>>
}


----- COMPILED JAVASCRIPT
import { toBitArray, bitArraySlice } from "../gleam.mjs";

export function go(x) {
  let i = 4;
  return toBitArray([bitArraySlice(toBitArray([171]), 0, i)]);
}
