compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bit_arrays__bit_array_literal_string_is_treated_as_utf8.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bit_arrays.rs
assertion_line: 1747
expression: "\npub fn main() {\n  <<\"hello\", \" \", \"world\">>\n}"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  <<"hello", " ", "world">>
}

----- COMPILED JAVASCRIPT
import { toBitArray, stringBits } from "../gleam.mjs";

export function main() {
  return toBitArray([stringBits("hello"), stringBits(" "), stringBits("world")]);
}
