compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bit_arrays__bit_array_literal_string_pattern_is_treated_as_utf8.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bit_arrays.rs
assertion_line: 1757
expression: "\npub fn main() {\n  case <<>> {\n    <<\"a\", \"b\", _:bytes>> -> 1\n    _ -> 2\n  }\n}"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  case <<>> {
    <<"a", "b", _:bytes>> -> 1
    _ -> 2
  }
}

----- COMPILED JAVASCRIPT
import { toBitArray } from "../gleam.mjs";

export function main() {
  let $ = toBitArray([]);
  if (
    $.bitSize >= 8 &&
    $.byteAt(0) === 97 &&
    $.bitSize >= 16 &&
    $.byteAt(1) === 98 &&
    ($.bitSize - 16) % 8 === 0
  ) {
    return 1;
  } else {
    return 2;
  }
}
