compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bit_arrays__bit_array_sliced.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bit_arrays.rs
assertion_line: 369
expression: "\npub fn go(x) {\n  <<<<0xAB>>:bits-4>>\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  <<<<0xAB>>:bits-4>>
}


----- COMPILED JAVASCRIPT
import { toBitArray, bitArraySlice } from "../gleam.mjs";

export function go(x) {
  return toBitArray([bitArraySlice(toBitArray([171]), 0, 4)]);
}
